Ajout de la mémoire dans metadata_matching

--- a/Notebooks/metadata_matching.ipynb
+++ b/Notebooks/metadata_matching.ipynb
@@ -13,6 +13,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3adb64d2-68e6-45f1-b703-67e2497e9648",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e880e3e-c8bf-48df-b932-673ff8f0437b",
    "metadata": {},
    "outputs": [],
@@ -78,8 +89,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "md_header_splits = markdown_splitter.split_text(pages_txt[0].page_content)\n",
-    "# Les metadata sont dans les md_header_splits[i].metadata pour i parcourant l'ensemble des chunks\n",
+    "md_header_splits = markdown_splitter.split_text(pages_txt[0].page_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56b41827-213b-4a93-bbca-e8a7ec499de5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "metadata_docs=[]\n",
     "for i in range(len(md_header_splits)):\n",
     "    metadata_inter=\"\"\n",
@@ -89,180 +108,9 @@
     "        metadata_inter=metadata_inter+md_header_splits[i].metadata['Header 2']\n",
     "    if 'Header 3' in list(md_header_splits[i].metadata.keys()):\n",
     "        metadata_inter=metadata_inter+'. '+md_header_splits[i].metadata['Header 3']\n",
-    "    metadata_docs.append(metadata_inter)    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af5ba3d6-649a-4c33-b2ae-64d894620dcb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "56b41827-213b-4a93-bbca-e8a7ec499de5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fec99af-e44b-49f2-943a-7055126a51ff",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    metadata_docs.append(metadata_inter)\n",
     "embeddings_metadata = model.encode(metadata_docs)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c089a284-17bc-4b1f-89b8-c88eccaa9cbd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(embeddings_metadata[0][0:5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd0f8696-147a-4e32-b380-91cc9e961969",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f5bdced-1cbc-490c-b86b-0d289b31d83b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query=\"Comment changer d'APE ?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fcc83e5-c21e-4d5e-944d-242811a7e9a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the similarity between the query embedding and document embeddings\n",
-    "query_embedding = model.encode(query)\n",
-    "similarity_scores = cosine_similarity(query_embedding.reshape(1,-1), embeddings_metadata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d515632f-c2c5-473e-a35b-04d74307b858",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(similarity_scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8fbdbd9-7787-49e8-b772-a002bd3224c1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_indices = np.argsort(similarity_scores)[::-1]\n",
-    "print(sorted_indices)\n",
-    "print(type(sorted_indices))\n",
-    "print(type(sorted_indices[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a2a906c-439f-419e-84c7-3862f71da320",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "md_header_splits[2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25476dcf-de9e-4466-95b6-4f72fc8cba9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sorted_documents = [md_header_splits[i] for i in sorted_indices[0]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "504c791b-b81a-40a3-a435-9686ef6890c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(md_header_splits)):\n",
-    "    print(metadata_docs[i])\n",
-    "    print(similarity_scores[0][i],'\\n')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d0f5f0d3-d7f6-406c-8d9f-f15086d9bc3e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(type(md_header_splits[1].metadata))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3c747683-6606-4162-8345-bc6be944e730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(md_header_splits[1].metadata['Header 2'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4037479b-abd1-43a1-9886-571546600ed9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(md_header_splits)):\n",
-    "    if 'Header 3' in list(md_header_splits[i].metadata.keys()):\n",
-    "        print(md_header_splits[i].metadata['Header 3'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3f5ca02-66c1-48b4-a285-757e974db6f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e7e667c-0a3d-465e-a57b-5766fef7c6c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -272,27 +120,34 @@
    "outputs": [],
    "source": [
     "# Tout est rassemblé dans une fonction\n",
-    "def met_match(question, md_header_splits,k):\n",
-    "# Les metadata sont dans les md_header_splits[i].metadata pour i parcourant l'ensemble des chunks\n",
-    "    metadata_docs=[]\n",
-    "    for i in range(len(md_header_splits)):\n",
-    "        metadata_inter=\"\"\n",
-    "        if any(item in list(md_header_splits[i].metadata.keys()) for item in ['Header 2','Header 3']) is False:\n",
-    "            metadata_inter=metadata_inter+md_header_splits[i].metadata['Header 1']\n",
-    "        if 'Header 2' in list(md_header_splits[i].metadata.keys()):\n",
-    "            metadata_inter=metadata_inter+md_header_splits[i].metadata['Header 2']\n",
-    "        if 'Header 3' in list(md_header_splits[i].metadata.keys()):\n",
-    "            metadata_inter=metadata_inter+'. '+md_header_splits[i].metadata['Header 3']\n",
-    "        metadata_docs.append(metadata_inter)\n",
-    "    embeddings_metadata = model.encode(metadata_docs)\n",
+    "def met_match_txt(question, embeddings_metadata,k):\n",
     "    query_embedding = model.encode(question)\n",
     "    similarity_scores = cosine_similarity(query_embedding.reshape(1,-1), embeddings_metadata)\n",
     "    # Sort the documents based on similarity scores\n",
     "    sorted_indices = np.argsort(similarity_scores)[0]\n",
     "    sorted_documents = [md_header_splits[i].page_content for i in sorted_indices][::-1]\n",
+    "    sorted_documents=sorted_documents[:k]\n",
     "    top_k_documents=\"\"\n",
     "    for i in range(k):\n",
-    "        top_k_documents = top_k_documents+'\\n'+sorted_documents[i]\n",
+    "        top_k_documents=top_k_documents+'\\n\\n'+sorted_documents[i]\n",
+    "    return top_k_documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da0337e3-5016-418a-9c1e-a1db50c03e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tout est rassemblé dans une fonction\n",
+    "def met_match_doc(question, embeddings_metadata,k):\n",
+    "    query_embedding = model.encode(question)\n",
+    "    similarity_scores = cosine_similarity(query_embedding.reshape(1,-1), embeddings_metadata)\n",
+    "    # Sort the documents based on similarity scores\n",
+    "    sorted_indices = np.argsort(similarity_scores)[0]\n",
+    "    sorted_documents = [md_header_splits[i] for i in sorted_indices][::-1]\n",
+    "    top_k_documents=sorted_documents[:k]\n",
     "    return top_k_documents"
    ]
   },
@@ -303,7 +158,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "met_match(md_header_splits=md_header_splits,k=3,question=\"comment changer d'APE ?\")"
+    "met_match_txt(embeddings_metadata=embeddings_metadata,k=2,question=\"comment changer d'APE ?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b11e67c-a94e-4c20-801f-06a3307c565e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "met_match_doc(embeddings_metadata=embeddings_metadata,k=2,question=\"comment changer d'APE ?\")"
    ]
   },
   {
@@ -312,9 +177,7 @@
    "id": "ea483899-cf92-4b63-892e-f3d0ab7becf3",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(similarity_scores)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -343,10 +206,10 @@
     "# Build prompt llama chat\n",
     "template_chat = \"\"\"<s>[INST] <<SYS>>\n",
     "\\n\n",
-    "Vous êtes un assistant conversationnel cordial et honnête, qui répond, uniquement en langue française, aux questions ou aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse. \n",
+    "Vous êtes un assistant conversationnel concis et honnête, qui répond, uniquement en langue française, aux problèmes posés par un usager. Si vous ne connaissez pas la réponse, répondez simplement que vous ne savez pas, n'essayez pas d'inventer la réponse.  \n",
     "\\n<</SYS>>\n",
     "\\n\n",
-    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : {question}\n",
+    "À l'aide du contexte ci-dessous, répondez, uniquement en langue française, au problème suivant posé par un usager : \"{question}\". Si besoin, demandez à l'usager certaines informations afin de préciser votre réponse en fonction du contexte.\n",
     "\\n\\n\n",
     "Contexte : \n",
     "\\n\n",
@@ -354,14 +217,6 @@
     "[/INST]\"\"\"\n",
     "QA_CHAIN_PROMPT_chat = PromptTemplate.from_template(template_chat)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2bffdfb-0937-49a0-8da1-6da4d7d96716",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -377,7 +232,7 @@
     "    model_path='./llama-2-7b-chat.Q5_K_M.gguf',\n",
     "    n_gpu_layers=0,\n",
     "    max_tokens = 8000,\n",
-    "    temperature = 0.1,\n",
+    "    temperature = 0.0,\n",
     "    n_batch=n_batch,\n",
     "    f16_kv=True,\n",
     "    use_mlock=True,\n",
@@ -399,7 +254,7 @@
     "from langchain.schema.output_parser import StrOutputParser\n",
     "output_parser = StrOutputParser()\n",
     "chain = RunnableMap({\n",
-    "    \"context\": lambda x: met_match(loader=loader,k=2,question=x[\"question\"]),\n",
+    "    \"context\": lambda x: met_match_txt(embeddings_metadata=embeddings_metadata,k=2,question=x[\"question\"]),\n",
     "    \"question\": lambda x: x[\"question\"]\n",
     "}) | QA_CHAIN_PROMPT_chat | llm | output_parser"
    ]
@@ -412,6 +267,7 @@
    "outputs": [],
    "source": [
     "from langchain.callbacks.tracers import ConsoleCallbackHandler\n",
+    "from langchain.callbacks.manager import CallbackManagerForRetrieverRun\n",
     "# On utilise config-callbacks pour avoir le détail du déroulement de la chaîne\n",
     "chain.invoke({\"question\": \"Comment changer d'APE?\"},config={'callbacks': [ConsoleCallbackHandler()]})"
    ]
@@ -437,11 +293,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c9e5e88e-af4b-4383-b7aa-dbeee9f77736",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test=RunnableMap({\n",
+    "    \"context\": lambda x: met_match_txt(embeddings_metadata=embeddings_metadata,k=2,question=x[\"question\"]),\n",
+    "    \"question\": lambda x: x[\"question\"]}).invoke({\"question\": \"Où puis-je obtenir mon avis de situation ?\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94144dfe-40e5-4ff0-b5aa-603b46de009d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(type(test))\n",
+    "print(test.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4e0ae998-5142-4ec3-b4cc-4b5253817938",
    "metadata": {},
    "outputs": [],
    "source": [
-    "template_memory=PromptTemplate(input_variables=['chat_history', 'question'],\n",
+    "template_memory=PromptTemplate(input_variables=['chat_history', 'question','context'],\n",
     "               template='''<s>[INST] <<SYS>>\n",
     "\\n\n",
     "Vous êtes un assistant conversationnel cordial et honnête, qui répond, \n",
@@ -451,8 +330,8 @@
     "               \\n<</SYS>>\\n\n",
     "               Historique de la conversation:\\n{chat_history}\n",
     "               \\n À l'aide de l'historique de la conversation ci-dessus, et du contexte ci-dessous, répondez, \n",
-    "               uniquement en langue française, au problème suivant posé par un usager :\n",
-    "               \\nSuite de la conversation: {question}\\n[/INST]''')"
+    "               uniquement en langue française, au problème suivant posé par un usager : {question}\\n\n",
+    "               [/INST]''')"
    ]
   },
   {
@@ -465,10 +344,33 @@
     "# On garde en mémoire l'historique des messages\n",
     "# Return_messages = True signifie qu'on met les messages passés sous forme de liste, \n",
     "# et non de la forme d'un simple texte\n",
-    "\n",
+    "from langchain.memory import ConversationBufferMemory\n",
+    "from langchain.chains import ConversationalRetrievalChain\n",
     "memory = ConversationBufferMemory(\n",
     "    memory_key=\"chat_history\",\n",
     "    return_messages=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f16f99bd-d451-4fa4-987c-50ab928af959",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Custom retriever à l'aide de la fonction met_match\n",
+    "from langchain.schema.retriever import BaseRetriever\n",
+    "from langchain.schema import Document\n",
+    "from typing import List\n",
+    "\n",
+    "class CustomRetriever(BaseRetriever):\n",
+    "    def _get_relevant_documents(\n",
+    "        self, query: str, *, run_manager: CallbackManagerForRetrieverRun\n",
+    "    ) -> List[Document]:\n",
+    "        # Use your existing retriever to get the documents\n",
+    "        documents = met_match_doc(embeddings_metadata=embeddings_metadata,k=2,question=query)\n",
+    "        \n",
+    "        return documents"
    ]
   },
   {
@@ -480,13 +382,12 @@
    "source": [
     "# Le module ConversationalRetrievalChain gère la mémoire\n",
     "\n",
-    "retriever=vectordb.as_retriever()\n",
     "qa_memory = ConversationalRetrievalChain.from_llm(\n",
     "    llm,\n",
-    "    retriever=retriever,\n",
+    "    retriever=CustomRetriever(),\n",
     "    memory=memory,\n",
-    "    condense_question_prompt=template_memory\n",
-    ")"
+    "    condense_question_prompt=template_memory,\n",
+    "    verbose=True)"
    ]
   },
   {
@@ -495,7 +396,101 @@
    "id": "b4df3ebd-614a-4524-b6c9-4390566d12a1",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "memory_chain=RunnableMap({\n",
+    "    \"context\": lambda x: met_match_txt(embeddings_metadata=embeddings_metadata,k=2,question=x[\"question\"]),\n",
+    "    \"question\": lambda x: x[\"question\"]}) | qa_memory\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70d34799-2c0b-46ce-a0df-452af1cc6785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
+    "result = memory_chain.invoke({\"question\": question})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ccd01e6-9ec4-4127-be69-1d9f2c553bed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
+    "result = qa_memory.invoke({\"question\": question})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e37363b-bf56-44a1-8f33-50dd4b987a4e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Le prompt est en anglais, on le change\n",
+    "qa_memory_promptfr = ConversationalRetrievalChain.from_llm(\n",
+    "    llm,\n",
+    "    retriever=CustomRetriever(),\n",
+    "    memory=memory,\n",
+    "    condense_question_prompt=template_memory,\n",
+    "    combine_docs_chain_kwargs={\"prompt\": QA_CHAIN_PROMPT_chat},\n",
+    "    verbose=True)\n",
+    "#,\n",
+    "#    combine_docs_chain_kwargs={\"prompt\": QA_CHAIN_PROMPT_chat}\n",
+    "# combine_docs_chain_kwargs={\n",
+    "        #\"prompt\": ChatPromptTemplate.from_messages([\n",
+    "            #system_message_prompt,\n",
+    "            #human_message_prompt,\n",
+    "        #]),\n",
+    "    #}\n",
+    "#)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b3db12a-f5cc-4244-bddc-4215a34e5f37",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "memory_chain_promptfr=RunnableMap({\n",
+    "    \"context\": lambda x: met_match_txt(embeddings_metadata=embeddings_metadata,k=2,question=x[\"question\"]),\n",
+    "    \"question\": lambda x: x[\"question\"]}) | qa_memory_promptfr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d29823e-66fa-4089-b5cd-ad952f167e2a",
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af59abff-7aab-4054-bb46-a1c9030eff0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Où puis-je obtenir mon avis de situation ?\"\n",
+    "result = qa_memory_promptfr.invoke({\"question\": question,'context': 'Test_contexte'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f4b02b8-9b81-4b00-9e61-eda0526c198b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "question = \"Je ne sais pas si mes données sont diffusées\"\n",
+    "result = memory_chain_promptfr.invoke({\"question\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -503,7 +498,9 @@
    "id": "c1b57c0c-bf48-4de9-b70c-89ff829252c8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result['answer']"
+   ]
   },
   {
    "cell_type": "code",
@@ -511,7 +508,10 @@
    "id": "77e51ad2-98b4-4860-8252-66ef8ff60f73",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "question = \"Je ne sais pas si mes données sont diffusées\"\n",
+    "result = qa_memory({\"question\": question})"
+   ]
   },
   {
    "cell_type": "code",
@@ -519,7 +519,9 @@
    "id": "9c45cfbd-fb3b-4a7f-9035-e59b9962a440",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result['answer']"
+   ]
   },
   {
    "cell_type": "code",
