Modif Mistral QLoRA fine-tune

--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_mental_health.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_mental_health.ipynb
@@ -18,9 +18,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q datasets scipy wandb\n",
+    "!pip install -q datasets scipy #wandb\n",
     "!pip install -q trl\n",
-    "!pip install -q ipywidgets==7.7.1"
+    "!pip install -q ipywidgets==7.7.1\n",
+    "!pip install sentencepiece"
    ]
   },
   {
@@ -114,8 +115,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig\n",
-    "\n"
+    "from transformers import AutoTokenizer, AutoModelForCausalLM, BitsAndBytesConfig"
    ]
   },
   {
@@ -130,26 +130,7 @@
     "    bnb_4bit_use_double_quant=True,\n",
     "    bnb_4bit_quant_type=\"nf4\",\n",
     "    bnb_4bit_compute_dtype=torch.bfloat16\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = AutoModelForCausalLM.from_pretrained(base_model_id, quantization_config=bnb_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install sentencepiece"
+    ")"
    ]
   },
   {
@@ -173,10 +154,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = AutoModelForCausalLM.from_pretrained(base_model_id, quantization_config=bnb_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "inputs = tokenizer(\"Qui est l'actuel président de la République française ?\", return_tensors=\"pt\")\n",
     "output_generate=model.generate(**inputs,max_new_tokens=20, return_dict_in_generate=True, output_scores=True)\n",
-    "transition_scores = model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)\n",
-    "\n"
+    "transition_scores = model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
    ]
   },
   {
@@ -203,6 +192,224 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def generate_prompt(data_point):\n",
+    "    \"\"\"\n",
+    "    Generates a formatted prompt for fine-tuning from a data point.\n",
+    "    \"\"\"\n",
+    "    prefix_text = \"This is a conversation from a mental health therapy chat. Respond empathetically and informatively.\" #instruction\n",
+    "    context = data_point['Context']\n",
+    "    response = data_point['Response']\n",
+    "    formatted_prompt = f\"<s>[INST] {prefix_text} {context} [/INST]{response}</s>\"\n",
+    "    return formatted_prompt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dataset[0])\n",
+    "print(generate_prompt(dataset[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming `dataset` is loaded using the datasets library\n",
+    "dataset = dataset.map(lambda x: {\"prompt\": generate_prompt(x)})\n",
+    "def tokenize_function(examples):\n",
+    "    return tokenizer(examples[\"prompt\"], padding=\"max_length\", truncation=True)\n",
+    "\n",
+    "tokenized_dataset = dataset.map(tokenize_function, batched=True)\n",
+    "dataset = dataset.shuffle(seed=1234)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(tokenized_dataset[0])\n",
+    "print(tokenized_dataset)\n",
+    "print(tokenized_dataset['input_ids'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the dataset into training and testing sets\n",
+    "train_test_split = dataset.train_test_split(test_size=0.95)  # 5% for testing, 95% for training\n",
+    "train_dataset = train_test_split[\"train\"]\n",
+    "test_dataset = train_test_split[\"test\"]\n",
+    "\n",
+    "print(train_dataset)\n",
+    "print(test_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
+    "model.gradient_checkpointing_enable()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bitsandbytes as bnb\n",
+    "def find_all_linear_names(model):\n",
+    "  cls = bnb.nn.Linear4bit #if args.bits == 4 else (bnb.nn.Linear8bitLt if args.bits == 8 else torch.nn.Linear)\n",
+    "  lora_module_names = set()\n",
+    "  for name, module in model.named_modules():\n",
+    "    if isinstance(module, cls):\n",
+    "      names = name.split('.')\n",
+    "      lora_module_names.add(names[0] if len(names) == 1 else names[-1])\n",
+    "    if 'lm_head' in lora_module_names: # needed for 16-bit\n",
+    "      lora_module_names.remove('lm_head')\n",
+    "  return list(lora_module_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modules = find_all_linear_names(model)\n",
+    "print(modules)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from peft import LoraConfig, get_peft_model\n",
+    "\n",
+    "lora_config = LoraConfig(\n",
+    "    r=8,\n",
+    "    lora_alpha=32,\n",
+    "    target_modules=modules,\n",
+    "    lora_dropout=0.05,\n",
+    "    bias=\"none\",\n",
+    "    task_type=\"CAUSAL_LM\"\n",
+    ")\n",
+    "\n",
+    "model_peft = get_peft_model(model, lora_config)\n",
+    "model_peft = accelerator.prepare_model(model_peft)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainable, total = model_peft.get_nb_trainable_parameters()\n",
+    "print(f\"Trainable: {trainable} | total: {total} | Percentage: {trainable/total*100:.4f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "\n",
+    "project = \"SFT-mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "base_model_name = \"mistralai/Mistral-7B-Instruct-v0.3\"\n",
+    "run_name = base_model_name + \"-\" + project\n",
+    "output_dir = \"./\" + run_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import transformers\n",
+    "\n",
+    "from trl import SFTTrainer\n",
+    "\n",
+    "tokenizer.pad_token = tokenizer.eos_token\n",
+    "torch.cuda.empty_cache()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer = SFTTrainer(\n",
+    "    model=model,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=test_dataset,\n",
+    "    dataset_text_field=\"prompt\",\n",
+    "    peft_config=lora_config,\n",
+    "    args=transformers.TrainingArguments(\n",
+    "        per_device_train_batch_size=2,\n",
+    "        gradient_checkpointing=True,\n",
+    "        gradient_accumulation_steps=4,\n",
+    "        bf16=True,\n",
+    "        warmup_steps=5,\n",
+    "        max_steps=2000,\n",
+    "        learning_rate=2e-4,\n",
+    "        logging_steps=10,\n",
+    "        output_dir=\"outputs\",\n",
+    "        do_eval=True,\n",
+    "        evaluation_strategy=\"steps\",\n",
+    "        eval_steps=100,\n",
+    "        optim=\"paged_adamw_8bit\",\n",
+    "        save_strategy=\"epoch\",\n",
+    "        report_to=None,\n",
+    "        run_name=f\"{run_name}-{datetime.now().strftime('%Y-%m-%d-%H-%M')}\"\n",
+    "    ),\n",
+    "    data_collator=transformers.DataCollatorForLanguageModeling(tokenizer, mlm=False),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -211,6 +418,23 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.config.use_cache = False  # silence the warnings. Please re-enable for inference!\n",
+    "trainer.train()"
+   ]
   },
   {
    "cell_type": "code",
