Modif Mistral_QLora mental-health

--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_mental_health.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_mental_health.ipynb
@@ -18,10 +18,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q datasets scipy #wandb\n",
+    "!pip install -q datasets scipy protobuf #wandb\n",
     "!pip install -q trl\n",
     "!pip install -q ipywidgets==7.7.1\n",
     "!pip install sentencepiece"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Restart Kernel after installing packages"
    ]
   },
   {
@@ -174,6 +183,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(type(inputs))\n",
+    "print(inputs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "\n",
     "input_length = 1 if model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
@@ -237,7 +256,8 @@
    "source": [
     "print(tokenized_dataset[0])\n",
     "print(tokenized_dataset)\n",
-    "print(tokenized_dataset['input_ids'][0])"
+    "print(tokenized_dataset['input_ids'][0])\n",
+    "print(tokenizer.decode(tokenized_dataset['input_ids'][0]))"
    ]
   },
   {
@@ -247,7 +267,7 @@
    "outputs": [],
    "source": [
     "# Split the dataset into training and testing sets\n",
-    "train_test_split = dataset.train_test_split(test_size=0.95)  # 5% for testing, 95% for training\n",
+    "train_test_split = dataset.train_test_split(test_size=0.05)  # test_size for testing\n",
     "train_dataset = train_test_split[\"train\"]\n",
     "test_dataset = train_test_split[\"test\"]\n",
     "\n",
@@ -386,16 +406,16 @@
     "    args=transformers.TrainingArguments(\n",
     "        per_device_train_batch_size=2,\n",
     "        gradient_checkpointing=True,\n",
-    "        gradient_accumulation_steps=4,\n",
+    "        gradient_accumulation_steps=16,\n",
     "        bf16=True,\n",
     "        warmup_steps=5,\n",
-    "        max_steps=2000,\n",
+    "        max_steps=50,\n",
     "        learning_rate=2e-4,\n",
     "        logging_steps=10,\n",
     "        output_dir=\"outputs\",\n",
     "        do_eval=True,\n",
     "        evaluation_strategy=\"steps\",\n",
-    "        eval_steps=100,\n",
+    "        eval_steps=10,\n",
     "        optim=\"paged_adamw_8bit\",\n",
     "        save_strategy=\"epoch\",\n",
     "        report_to=None,\n",
@@ -410,31 +430,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "model.config.use_cache = False  # silence the warnings. Please re-enable for inference!\n",
     "trainer.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
