Modif dataset Sirene

--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
@@ -99,7 +99,16 @@
     "fs.ls(\"vlapegue\")\n",
     "bucket = 'vlapegue/train_sirene'\n",
     "files = fs.ls(bucket)[-3:]\n",
-    "fs.download(files[1],'train_sirene.csv')"
+    "fs.download(files[2],'train_sirene.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files)"
    ]
   },
   {
@@ -118,7 +127,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dataset)"
+    "print(dataset[0])\n",
+    "print(dataset[1])"
    ]
   },
   {
@@ -127,7 +137,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dataset[0])"
+    "# On transforme la chaîne de caractères de messages en liste, (ce qui modifie l'ordre des entrées, a priori sans importance)\n",
+    "import ast\n",
+    "dataset = dataset.map(lambda x: {\"messages\": ast.literal_eval(x['messages'])} )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(dataset[0])\n",
+    "print(dataset[1])\n"
    ]
   },
   {
