--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "!pip install -q -U bitsandbytes\n",
     "!pip install -q -U git+https://github.com/huggingface/transformers.git\n",
-    "!pip install -q -U git+https://github.com/huggingface/peft.git\n",
+    "!pip install --upgrade peft trl\n",
+    "#!pip install -q -U git+https://github.com/huggingface/peft.git\n",
     "!pip install -q -U git+https://github.com/huggingface/accelerate.git\n"
    ]
   },
@@ -19,7 +20,6 @@
    "outputs": [],
    "source": [
     "!pip install -q datasets scipy protobuf #wandb\n",
-    "!pip install -q trl\n",
     "!pip install -q ipywidgets==7.7.1\n",
     "!pip install sentencepiece"
    ]
@@ -58,6 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import torch\n",
     "print(torch.version.cuda)"
    ]
@@ -328,7 +329,16 @@
    "outputs": [],
    "source": [
     "from peft import LoraConfig, PeftModel, prepare_model_for_kbit_training, get_peft_model\n",
-    "model.gradient_checkpointing_enable()\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.gradient_checkpointing_enable()"
    ]
   },
   {
@@ -375,8 +385,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from peft import LoraConfig, get_peft_model\n",
-    "\n",
+    "from peft import LoraConfig, get_peft_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lora_config = LoraConfig(\n",
     "    r=8,\n",
     "    lora_alpha=32,\n",
@@ -486,7 +503,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_model = \"./Mistral_Sirene_240718\"\n",
+    "new_model = \"./Mistral_Sirene_240718\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainer.model.save_pretrained(new_model)"
    ]
   },
@@ -495,7 +520,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# On importe le modèle Peft sauvegardé précédemment\n",
+    "! mc cp s3/vlapegue/train_sirene/Mistral_Sirene_240718 ./chatbot_sirene/pgms_tuto/Exemples_fine-tuning/Mistral_Sirene_240718 --recursive"
+   ]
   },
   {
    "cell_type": "code",
@@ -507,9 +535,17 @@
     "    base_model_id,\n",
     "    low_cpu_mem_usage=True,\n",
     "    return_dict=True,\n",
-    "    torch_dtype=torch.float16,\n",
-    "    device_map={\"\": 0},\n",
-    ")\n",
+    "    #torch_dtype=torch.float16,\n",
+    "    #device_map={\"\": 0},\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "merged_model= PeftModel.from_pretrained(base_model, new_model)\n",
     "merged_model= merged_model.merge_and_unload()"
    ]
