--- a/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
+++ b/pgms_tuto/Exemples_fine-tuning/Mistral_qlora_sirene.ipynb
@@ -522,7 +522,7 @@
    "outputs": [],
    "source": [
     "# On importe le modèle Peft sauvegardé précédemment\n",
-    "! mc cp s3/vlapegue/train_sirene/Mistral_Sirene_240718 ./chatbot_sirene/pgms_tuto/Exemples_fine-tuning/Mistral_Sirene_240718 --recursive"
+    "! mc cp s3/vlapegue/train_sirene/Mistral_Sirene_240718 ./Mistral_Sirene_240718 --recursive"
    ]
   },
   {
@@ -546,7 +546,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_model= PeftModel.from_pretrained(base_model, new_model)\n",
+    "merged_model= PeftModel.from_pretrained(model, new_model)\n",
     "merged_model= merged_model.merge_and_unload()"
    ]
   },
@@ -555,21 +555,97 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Utilisation du modèle de base\n",
+    "\n",
+    "inputs = tokenizer(\"Qui est l'actuel président de la République française ?\", return_tensors=\"pt\")\n",
+    "output_generate=base_model.generate(**inputs,max_new_tokens=80, return_dict_in_generate=True, output_scores=True)\n",
+    "transition_scores = base_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "input_length = 1 if base_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'tokens':tokens,'probas': probas})\n",
+    "df.to_csv(\"general_base_tokens.csv\", sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Utilisation du modèle fine-tuné\n",
+    "\n",
+    "messages = [{\"role\": \"user\", \"content\": \"Qui est l'actuel président de la République française ?\"}]\n",
+    "model_inputs = tokenizer.apply_chat_template(messages, return_tensors=\"pt\")\n",
+    "output_generate=merged_model.generate(model_inputs,max_new_tokens=80, return_dict_in_generate=True, output_scores=True,pad_token_id=tokenizer.eos_token_id)\n",
+    "transition_scores = merged_model.compute_transition_scores(output_generate.sequences, output_generate.scores, normalize_logits=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "input_length = 1 if merged_model.config.is_encoder_decoder else inputs.input_ids.shape[1]\n",
+    "\n",
+    "generated_tokens = output_generate.sequences[:, input_length:]\n",
+    "\n",
+    "tokens=[]\n",
+    "probas=[]\n",
+    "\n",
+    "for tok, score in zip(generated_tokens[0], transition_scores[0]):\n",
+    "\n",
+    "# | token | token string | log probability | probability\n",
+    "    tokens.append(tokenizer.decode(tok))\n",
+    "    probas.append(np.exp(score.numpy()))\n",
+    "    print(f\"| {tok:5d} | {tokenizer.decode(tok):8s} | {score.numpy():.3f} | {np.exp(score.numpy()):.2%}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "df = pd.DataFrame({'tokens':tokens,'probas': probas})\n",
+    "df.to_csv(\"general_merged_tokens.csv\", sep=\";\")"
+   ]
   }
  ],
  "metadata": {
